2014-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation
2014-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'CmdSwitch' class in 'syd/cmdswitch.cpp'
	and 'syd/cmdswitch.h'.
	* Added a 'Profile' class in 'syd/profile.cpp'
	and 'syd/profile.h'.