@@ -1,0 +1,17 @@
+// config.h
+//
+// Configuration values for Switchyard
+//
+// (C) Copyright 2014 Fred Gleason <fredg@paravelsystems.com>
+//     All Rights Reserved
+//
+
+#ifndef CONFIG_H
+#define CONFIG_H
+
+#define SWITCHYARD_ROUTING_FILE "/var/lib/switchyard/routing.conf"
+#define SWITCHYARD_SLOTS 1
+#define SWITCHYARD_SHM_KEY 0x59D2B831
+
+
+#endif  // CONFIG_H
