@@ -6,12 +6,51 @@
 //     All Rights Reserved.
 //
 
+#include <stdio.h>
+#include <stdlib.h>
+#include <syslog.h>
+
+#include <QtCore/QCoreApplication>
+
+#include "cmdswitch.h"
+
 #include "syd.h"
+
+MainObject::MainObject(QObject *parent)
+  : QObject(parent)
+{
+  bool debug=false;
+
+  //
+  // Process Command Line
+  //
+  CmdSwitch *cmd=new CmdSwitch(qApp->argc(),qApp->argv(),"syd",SYD_USAGE);
+  for(unsigned i=0;i<cmd->keys();i++) {
+    if(cmd->key(i)=="-d") {
+      debug=true;
+      cmd->setProcessed(i,true);
+    }
+    if(!cmd->processed(i)) {
+      fprintf(stderr,"syd: unrecognized option\n");
+      exit(256);
+    }
+  }
+
+  //
+  // Open Syslog
+  //
+  openlog("syd",LOG_NDELAY|LOG_PERROR,LOG_DAEMON);
+
+  //
+  // Load Routing Rules
+  //
+  syd_routing=new Routing();
+}
+
 
 int main(int argc,char *argv[])
 {
-  printf("Hello World\n");
-
-  exit(0);
+  QCoreApplication a(argc,argv);
+  new MainObject();
+  return a.exec();
 }
-
