@@ -6,5 +6,21 @@
 //     All Rights Reserved.
 //
 
-#include <stdlib.h>
-#include <stdio.h>
+#include <stdint.h>
+
+#include <QtCore/QObject>
+
+#include "config.h"
+#include "routing.h"
+
+#define SYD_USAGE "-d\n"
+
+class MainObject : public QObject
+{
+  Q_OBJECT;
+ public:
+  MainObject(QObject *parent=0);
+
+ private:
+  Routing *syd_routing;
+};
